# module-22-main

./: Customer-API.postman_collection.json  Dockerfile  README.md  build.yml  docker-compose.yml  environment.env  requirements.txt
.github/workflows/: build.yml
api/: celery.py  settings.py  urls.py
api/order/: constants.py  consumer.py  factories.py  producer.py  urls.py  utils.py
api/order/migrations/: 0001_initial_customer_data.py
api/order/models/: __init__.py  address.py  order.py  user.py
api/order/serializers/: __init__.py  address_serializer.py  order_serializer.py  user_serializer.py
api/order/tests/test_models/: test_address.py  test_order.py
api/order/tests/test_serializers/: test_order_serializer.py  (+1 more)
api/order/viewsets/: __init__.py  address_viewset.py  order_viewset.py
rp-poetry/: db.sqlite3  manage.py  pyproject.toml
rp-poetry/bookstorewell/: asgi.py  settings.py  urls.py  wsgi.py
rp-poetry/order/: apps.py  factories.py  urls.py
rp-poetry/order/models/: order.py  product.py
rp-poetry/order/serializers/: order_serializers.py
rp-poetry/order/tests/: test_order_viewset.py
rp-poetry/order/tests/test_viewsets/: test_product_viewset.py
rp-poetry/order/viewsets/: __init__.py  order_viewset.py
rp-poetry/product/: apps.py  factories.py  urls.py
rp-poetry/product/models/: __init__.py  category.py  product.py
rp-poetry/product/models/__pycache__/: __init__.py  order.py  product_serializer.py
rp-poetry/product/serializers/: category_seralizers.py  product_serializers.py
rp-poetry/product/viewsets/: __init__.py  product_viewset.py
(+2 files in other folders)
